--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python311", "ffmpeg"]
+nixPkgs = ["...", "ffmpeg", "portaudio"]
 
-[phases.install]
-cmds = ["python -m venv --copies /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt"]
+[phases.build]
+cmds = ["pip install -r requirements.txt"]
 
 [start]
 cmd = "python bot.py"
